# eChat

./: .env  Cargo.toml
migrations/: 20221105063731_user.down.sql  20221105063731_user.up.sql  20221105084938_friend.down.sql  20221105084938_friend.up.sql  20221106074353_data.down.sql  20221106074353_data.up.sql  20221107075954_group.down.sql  20221107075954_group.up.sql  20221107105548_message.down.sql  20221107105548_message.up.sql
resouce/: er.uml
src/: Auth.rs  err.rs  firend.rs  lib.rs  main.rs  user.rs  utils.rs
src/http/: friend.rs  group.rs  message.rs  mod.rs  user.rs
src/modles/: friend.rs  group.rs  message.rs  mod.rs  user.rs
src/persistent/: friend.rs  group.rs  message.rs  mod.rs  user.rs
